db and models updated. Comment.js completed

--- a/Views/login.handlebars
+++ b/Views/login.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>              *TO_DO: add sign up page and no display to here THEN add click events to js 
 <html lang="en">
-<!--  <link rel="stylesheet" href="./css/loginpage.css"> 
-<script src="./js/login.js"></script>   -->
+<!--  <link rel="stylesheet" href="./css/loginpage.css"> -->
+<script src="./js/login.js"></script>   
 <section class="sub-header" id="websiteTitle">
     <h2>The Tech Blog</h2>
 </section>
