--- a/Views/login.handlebars
+++ b/Views/login.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>              *TO_DO: add sign up page and no display to here THEN add click events to js 
 <html lang="en">
-<!--  <link rel="stylesheet" href="./css/loginpage.css"> -->
-<script src="./js/login.js"></script>   
+<link rel="stylesheet" href=".././Public/css/style.css"> -->
+<script src=".././Public/js/login.js"></script>   
 <section class="sub-header" id="websiteTitle">
     <h2>The Tech Blog</h2>
 </section>
@@ -12,14 +12,14 @@
             <div class="column-1">
                 <div class="row">
                     <div class="text-center">
-                        <h1 class="loginTitle" id="loginTitle">Login</h1>
+                        <h2 class="loginTitle" id="loginTitle">Login</h2>
                         <form class="form login-form">
                             <div class="form-group">
                                 <label for="username">Username</label>
-                                <input class="form-input" type="text" id="username-input" />
+                                <input class="form-input" type="text" id="username-login" />
 
                                 <label for="password">Password</label>
-                                <input class="form-input" type="password" id="password-input" />
+                                <input class="form-input" type="password" id="password-login" />
 
 
                                 <button class="btn btn-primary btn-lg" id="loginButton" type="submit">Login!</button>
@@ -32,25 +32,45 @@
         </div>
     </section>
 </section>
-.
+
 
 
 
 <section class="signup-card" id="signupPage" style="display: none;"> 
+
+
+
+
     <section class = "signup-card-body" id="bodyofSignupPage">
         <div class="row">
             <div class="column-1">
                 <div class="row">
                      <div class="text-center">
-                            <h1 class="signupTitle" id="signupTitle">Sign Up    
-                            </h1>
+
+
+
+
+
+                            <h2 class="signupTitle" id="signupTitle">Sign Up    
+                            </h2>
+
+
+
+
+
+
                             <form class="form signup-form">
+
+
+
                                 <div class="form-group"> 
+
+                                    
                                     <label for="username">Username</label>
-                                    <input class="form-input" type="text" id="username-input" />
+                                    <input class="form-input" type="text" id="username-signup" />
 
                                     <label for="password">Password</label>
-                                    <input class="form-input" type="password" id="password-input" />
+                                    <input class="form-input" type="password" id="password-signup" />
 
 
                                     <button class="btn btn-primary btn-lg" id="signupButton" type="submit">Sign Up!</button>
