--- a/Views/dashboard.handlebars
+++ b/Views/dashboard.handlebars
@@ -63,8 +63,8 @@
 
 </body>
 </html>
-<script src='../.././Public/js/logout.js'></script>
-<script src='../.././Public/js/post.js'></script>
+<script src="../Public/js/logout.js"></script>
+<script src="../Public/js/post.js"></script>
 
 
 
