--- a/Views/login.handlebars
+++ b/Views/login.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>              *TO_DO: add sign up page and no display to here THEN add click events to js 
 <html lang="en">
 <link rel="stylesheet" href=".././Public/css/style.css"> -->
-<script src=".././Public/js/login.js"></script>   
+</script src=".././Public/js/login.js"></script>   
 <section class="sub-header" id="websiteTitle">
     <h2>The Tech Blog</h2>
 </section>
@@ -83,5 +83,6 @@
         </div>
     </section>
 </section>
+<script src="../Public/js/login.js"></script>
 
 </html>
