handlebar displays adjusted

--- a/Views/dashboard.handlebars
+++ b/Views/dashboard.handlebars
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<script src="../Public/js/create-new-post.js"></script>
+
 <head>
     <meta charset = "UTF-8">
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
@@ -19,16 +21,7 @@
 
   <main class="col-auto">
         <!-- Render the sub layout -->
-        <div class="row">
-        <div class="column-1">
-            <div class="row">
-             <section class="previous-posts" id="previouspostsPage">
-                  //??? 
-             </section>
-            </div>
-        </div>
-        </div> 
-
+ <section class="body"> {{{body}}} </section>
  <section class="create-new-post-card" id="dashboardPage" style="display: none;"> 
         <section class = "create-new-post-card-body" id="bodyofdashboardPage">
             <div class="row">
@@ -58,27 +51,13 @@
   </main> 
 
 <footer>
-    <button class="btn btn-primary btn-lg" id="addNewPostButton">+ New Post!</button> //Need js for display above "dashboardPage" when button pressed and hide everything else in div?
+    <button class="btn btn-primary btn-lg" id="addNewPostButton">+ New Post!</button> 
 </footer>
 
 </body>
 </html>
 <script src="../Public/js/logout.js"></script>
 <script src="../Public/js/post.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
