--- a/Views/create-post.handlebars
+++ b/Views/create-post.handlebars
@@ -27,3 +27,4 @@
         </section>
  </section>
  <script src="../Public/js/post.js"></script>
+ <script src="../Public/js/create-new-post.js"></script>
