--- a/Views/login.handlebars
+++ b/Views/login.handlebars
@@ -1,7 +1,7 @@
-<!DOCTYPE html>              *TO_DO: add sign up page and no display to here THEN add click events to js 
+<!DOCTYPE html>             
 <html lang="en">
-<link rel="stylesheet" href=".././Public/css/style.css"> -->
-</script src=".././Public/js/login.js"></script>   
+
+</script src="../Public/js/login.js"></script>   
 <section class="sub-header" id="websiteTitle">
     <h2>The Tech Blog</h2>
 </section>
@@ -37,35 +37,18 @@
 
 
 <section class="signup-card" id="signupPage" style="display: none;"> 
-
-
-
-
     <section class = "signup-card-body" id="bodyofSignupPage">
         <div class="row">
             <div class="column-1">
                 <div class="row">
                      <div class="text-center">
 
-
-
-
-
                             <h2 class="signupTitle" id="signupTitle">Sign Up    
                             </h2>
 
-
-
-
-
-
                             <form class="form signup-form">
 
-
-
-                                <div class="form-group"> 
-
-                                    
+                                <div class="form-group">                                     
                                     <label for="username">Username</label>
                                     <input class="form-input" type="text" id="username-signup" />
 
@@ -83,6 +66,6 @@
         </div>
     </section>
 </section>
-<script src="../Public/js/login.js"></script>
+
 
 </html>
