trying to debug Mime issues

--- a/Views/login.handlebars
+++ b/Views/login.handlebars
@@ -1,7 +1,6 @@
-<!DOCTYPE html>             
-<html lang="en">
 
-</script src="../Public/js/login.js"></script>   
+
+
 <section class="sub-header" id="websiteTitle">
     <h2>The Tech Blog</h2>
 </section>
@@ -14,18 +13,27 @@
                     <div class="text-center">
                         <h2 class="loginTitle" id="loginTitle">Login</h2>
                         <form class="form login-form">
+
                             <div class="form-group">
-                                <label for="username">Username</label>
+                                <label class="form-username" for="username-login">Username:</label>
                                 <input class="form-input" type="text" id="username-login" />
+                           </div>
 
-                                <label for="password">Password</label>
+                            <div class="form-group"> 
+                                <label class="form-password" for="password-login">Password:</label>
                                 <input class="form-input" type="password" id="password-login" />
+                            </div>
 
-
+                            <div class="form-group"> 
                                 <button class="btn btn-primary btn-lg" id="loginButton" type="submit">Login!</button>
                             </div>
+                        
+                        <div class="form-group"> 
+                        <button class="btn btn-primary btn-lg" id="signupInstead" type="click">
+                            <a href="/signup"> Sign up instead</a>
+                        </button>
+                        </div>
                         </form>
-                        <button class="btn btn-primary btn-lg" id="signupButton">Sign up instead</button>
                     </div>
                 </div>
             </div>
@@ -33,39 +41,10 @@
     </section>
 </section>
 
+<script src="/js/login.js"></script>
 
 
 
-<section class="signup-card" id="signupPage" style="display: none;"> 
-    <section class = "signup-card-body" id="bodyofSignupPage">
-        <div class="row">
-            <div class="column-1">
-                <div class="row">
-                     <div class="text-center">
-
-                            <h2 class="signupTitle" id="signupTitle">Sign Up    
-                            </h2>
-
-                            <form class="form signup-form">
-
-                                <div class="form-group">                                     
-                                    <label for="username">Username</label>
-                                    <input class="form-input" type="text" id="username-signup" />
-
-                                    <label for="password">Password</label>
-                                    <input class="form-input" type="password" id="password-signup" />
 
 
-                                    <button class="btn btn-primary btn-lg" id="signupButton" type="submit">Sign Up!</button>
-                                </div>
-                            </form>
-                            <button class= "btn btn-primary btn-lg" id="loginButton"> Login instead</button>
-                     </div>
-                </div> 
-            </div>
-        </div>
-    </section>
-</section>
 
-
-</html>
