--- a/Views/Layouts/main.handlebars
+++ b/Views/Layouts/main.handlebars
@@ -4,31 +4,37 @@
     <meta charset = "UTF-8">
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Home | Tech Blog</title>
+    
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/jass.css">
     <link rel="stylesheet" href="/css/style.css">
+
+
 </head>
 
 <body class ="flex-column min-100-vh" id="navigationLinks">
 <section class="background"> 
+
+  
    <nav>
       <ul>
-        <li class="navigation-links">
-            <a href=#Homepage>Home</a>
+        <li class="navigation-links"> 
+           <a href="#Home">Home</a>
         </li>
 
         <li class="navigation-links">
-           <a href=#Dashboard>Dashboard</a>
+           <a href="#Dashboard">Dashboard</a>
         </li>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
           <li class="navigation-links"> 
-            <button class="no-button" id='logout'>Logout</button>
+            <button class="no-button" id='logout'>
+              <a href="#Logout">Logout</button</a></button>
           </li>
        
         {{else}} <!-- Render script for logged out users only -->
           <li class="navigation-links"> 
-            <a href='../../Public/js/login.js'>Login</a>
+            <a href="#Login">Login</a>
           </li>
         {{/if}}
   
@@ -39,20 +45,29 @@
   
   <header class = "changingTitle"> 
     <h1 class = "regular-title">
-      The Tech Blog
+     <a href="#Main">The Tech Blog</a>
     </h1>
   </header>
   </section>
+
   <main class="col-auto">
     <!-- Render the sub layout -->
     {{{ body }}}
   </main>
+
+
   <footer>
   </footer>
-</body>
 
-</html>
+
+</body>
  <!-- Render script for logged in users only -->
 {{#if logged_in}}
-     <script src='../.././Public/js/logout.js'></script>
+     <script src='/js/logout.js'></script>
   {{/if}}
+
+</html>
+
+
+
+
