--- a/Views/login.handlebars
+++ b/Views/login.handlebars
@@ -1,17 +1,16 @@
 
 
 
-<section class="sub-header" id="websiteTitle">
-    <h2>The Tech Blog</h2>
-</section>
 
-<section class="login-card" id="loginPage">
-    <section class="login-card-body" id="bodyofLoginPage">
+<div class="login-card" id="loginPage">
+    <div class="login-card-body" id="bodyofLoginPage">
         <div class="row">
             <div class="column-1">
-                <div class="row">
+            
                     <div class="text-center">
                         <h2 class="loginTitle" id="loginTitle">Login</h2>
+                       
+                       
                         <form class="form login-form">
 
                             <div class="form-group">
@@ -27,21 +26,27 @@
                             <div class="form-group"> 
                                 <button class="btn btn-primary btn-lg" id="loginButton" type="submit">Login!</button>
                             </div>
+                         </form>
+
+
+                        <form class="form signup-form"> 
                         
-                        <div class="form-group"> 
                         <button class="btn btn-primary btn-lg" id="signupInstead" type="click">
                             <a href="/signup"> Sign up instead</a>
                         </button>
-                        </div>
+                       
                         </form>
+
+
                     </div>
-                </div>
+                
             </div>
         </div>
-    </section>
-</section>
+    </div>
+</div>
 
-<script src="/js/login.js"></script>
+<script src="/Public/js/login.js"></script>
+
 
 
 
