--- a/Views/signup.handlebars
+++ b/Views/signup.handlebars
@@ -1,10 +1,10 @@
-
-<section class="sub-header" id="websiteTitle">
+<div class="signup">
+<div class="sub-header" id="websiteTitle">
     <h2>The Tech Blog</h2>
-</section>
+</div>
 
-<section class="signup-card" id="signupPage" style="display:none;"> 
-    <section class = "signup-card-body" id="bodyofSignupPage">
+<div class="signup-card" id="signupPage"> 
+    <div class = "signup-card-body" id="bodyofSignupPage">
         <div class="row">
             <div class="column-1">
                 <div class="row">
@@ -25,9 +25,9 @@
 
                                     <button class="btn btn-primary btn-lg" id="signupButton" type="submit">Sign Up!</button>
                                 </div>
-                            
+                             </form>
 
-                            
+                             <form class="login-form"></form>
                             <button class= "btn btn-primary btn-lg" id="loginInstead" type="click"> 
                                 <a href="/login"> Login instead</a>
                                 </button>
@@ -36,8 +36,9 @@
                 </div> 
             </div>
         </div>
-    </section>
-</section>
-<script src="/js/signup.js"></script>
+    </div>
+</div>
+ </div>
+<script src="/Public/js/signup.js"></script>
 
 
