--- a/Views/create-post.handlebars
+++ b/Views/create-post.handlebars
@@ -1,5 +1,5 @@
-<section class="create-new-post-card" id="dashboardPage" style="display: none;"> 
-        <section class = "create-new-post-card-body" id="bodyofdashboardPage">
+<div class="create-new-post-card" id="dashboardPage" style="display: none;"> 
+        <div class = "create-new-post-card-body" id="bodyofdashboardPage">
             <div class="row">
               <div class="column-1">
                     <div class="row">
@@ -21,7 +21,7 @@
                     </div>
                 </div>
             </div>
-        </section>
- </section>
+        </div>
+ </div>
  <script src="../Public/js/post.js"></script>
  <script src="../Public/js/create-new-post.js"></script>
