--- a/Views/dashboard.handlebars
+++ b/Views/dashboard.handlebars
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+
 
 
 <head>
@@ -21,7 +20,7 @@
 
   <main class="col-auto">
         <!-- Render the sub layout -->
- <section class="body"> {{{body}}} </section>
+ <div class="body"> {{{body}}} </div>
  
   </main> 
 
@@ -30,7 +29,7 @@
 </footer>
 
 </body>
-</html>
+
 <script src="/Public/js/logout.js"></script>
 
 
