--- a/Views/each-post-per-user.handlebars
+++ b/Views/each-post-per-user.handlebars
@@ -9,7 +9,7 @@
  <input type="hidden" name="post-id" value="{{post.id}}"/>
 
 <div class ="card">
-    <section class = "individual-card-body" id="bodyofSignupPage">
+    <div class = "individual-card-body" id="bodyofSignupPage">
         <div class="row">
             <div class="column-1">
                 <div class="row">
@@ -25,6 +25,6 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 </div>
 <script src="../Public/js/create-new-post.js">
