--- a/Views/edit-post-page.handlebars
+++ b/Views/edit-post-page.handlebars
@@ -1,5 +1,5 @@
-<section class="create-new-post-card" id="dashboardPage" style="display: none;"> 
-        <section class = "create-new-post-card-body" id="bodyofdashboardPage">
+<div class="create-new-post-card" id="dashboardPage" style="display: none;"> 
+        <div class = "create-new-post-card-body" id="bodyofdashboardPage">
             <div class="row">
               <div class="column-1">
                     <div class="row">
@@ -11,5 +11,11 @@
                                      <textarea class="form-textarea form-input" type="text" id="content-input" data-number="8"/></textarea>
                                 </div>
                                 <button class="btn btn-primary btn-lg" id="createButton" type="submit">Create</button>
-
+                         </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
 <script src="../Public/js/edit.js"></script>
